# light-cylinder

./: .gitignore  GPT_HANDOFF.md  README.md  index.html  main.py  pyproject.toml
docs/: codex_workflow.md  controls_spec.md  implementation_plan.md  index.html  performance_spec.md  product_spec.md  roadmap.md  task_queue.md  technical_spec.md  visual_acceptance.md  visual_spec.md
scripts/: build_web.py  check_all.py  check_public_safety.py
src/light_cylinder/: __init__.py  app.py  camera.py  config.py  environment.py  firefly.py  foxtail.py  grass.py  input.py  light.py  math3d.py  observation_cycle.py  rain.py  reactions.py  tuning.py  weather.py  world.py
tests/: conftest.py  test_camera.py  test_config.py  test_environment.py  test_firefly.py  test_foxtail.py  test_grass.py  test_input.py  test_light.py  test_math3d.py  test_observation_cycle.py  test_presentation.py  test_public_safety.py  test_rain.py  test_reactions.py  test_tuning.py  test_weather.py  test_web_build.py  test_world.py
